added perf book

--- a/data/books.yml
+++ b/data/books.yml
@@ -63,6 +63,10 @@
   author: "Susan L. Smalley & Diana Winston"
   category: "health"
 
+- title: "The Perfectionist's Guide to Losing Control"
+  author: "Katherine Morgan Schafler"
+  category: "health"
+  
 - title: "Radical Acceptance"
   author: "Tara Brach"
   category: "health"
